Regression: Bevel modifier spikes with the Loop Slide option #102532

Closed
opened 2022-11-15 19:32:43 +01:00 by Adam Friesen · 19 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 522.30

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-15 00:55, hash: efcd587bc2
Worked: 2.93.11

NOTE: it still works without the Loop Slide option

The change in behavior is caused by 4886ed2863

Short description of error
Blender's beveling is heading back to being busted and broken, a simple subdivided surface with holes in it can no longer be beveled cleaning without explosions in the mesh.

Exact steps for others to reproduce the error
Open the .blend file and see for yourself, turn the bevel modifier off and then on again.

.blend
BrokenBevel.blend

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 522.30 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-15 00:55, hash: `efcd587bc2` Worked: 2.93.11 NOTE: it still works without the `Loop Slide` option The change in behavior is caused by 4886ed2863 **Short description of error** Blender's beveling is heading back to being busted and broken, a simple subdivided surface with holes in it can no longer be beveled cleaning without explosions in the mesh. **Exact steps for others to reproduce the error** Open the .blend file and see for yourself, turn the bevel modifier off and then on again. **.blend** [BrokenBevel.blend](https://archive.blender.org/developer/F13918697/BrokenBevel.blend)
Author

Added subscriber: @Ace_Dragon

Added subscriber: @Ace_Dragon

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I can confirm that the behavior of the Bevel modifier changed in version 3.0.0 sometime between d08cc63e2f(May 4) and 84dcf12ceb(Sep 29).

Needs investigation.

I can confirm that the behavior of the Bevel modifier changed in version 3.0.0 sometime between `d08cc63e2f`(May 4) and `84dcf12ceb`(Sep 29). Needs investigation.
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscribers: @howardt, @lichtwerk

Added subscribers: @howardt, @lichtwerk
Member

NOTE: it still works without the Loop Slide option

The change in behavior is caused by 4886ed2863
from the commit message:

The current bug showed that that angle was much too big, and limited
desired behavior in many cases. Changing the angle from 0.25 radians
to 0.0001 radians (about 0.006 degrees) still fixes the original bug
and seems very unlikely to be limiting desired behavior now.

CC @howardt : what to do now? Is there a better threshold possibly? Or expose it to the UI?

NOTE: it still works without the `Loop Slide` option The change in behavior is caused by 4886ed2863 from the commit message: > The current bug showed that that angle was much too big, and limited > desired behavior in many cases. Changing the angle from 0.25 radians > to 0.0001 radians (about 0.006 degrees) still fixes the original bug > and seems very unlikely to be limiting desired behavior now. CC @howardt : what to do now? Is there a better threshold possibly? Or expose it to the UI?
Philipp Oeser changed title from Blender can no longer bevel a curved surface with holes without artifacts to "Rgression": Bevel modifier spikes with the Loop Slide option 2022-11-17 12:23:42 +01:00
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

@lichtwerk hi, any improvements after this commit {d17f5bcd8f}? (Can not test ATM)

@lichtwerk hi, any improvements after this commit {d17f5bcd8f}? (Can not test ATM)
Member

In #102532#1447352, @PratikPB2123 wrote:
@lichtwerk hi, any improvements after this commit {d17f5bcd8f}? (Can not test ATM)

Not in this case, no

> In #102532#1447352, @PratikPB2123 wrote: > @lichtwerk hi, any improvements after this commit {d17f5bcd8f}? (Can not test ATM) Not in this case, no
Pratik Borhade changed title from "Rgression": Bevel modifier spikes with the Loop Slide option to Regression: Bevel modifier spikes with the Loop Slide option 2022-11-20 11:49:18 +01:00

Added subscriber: @Baardaap

Added subscriber: @Baardaap

It's just a single data point and I don't really know how to test this thoroughly. But trying various angles seemed to indicate this spiking (in this particular test file) stops with a BEVEL_GOOD_ANGLE of 0.015, and I think that still doesn't break #86768 though I'm not really sure what to test there as .25 in current master seemed to behave identical to 0.0001 and 0.015 for the test file provided, so probably I test the wrong thing.

It's just a single data point and I don't really know how to test this thoroughly. But trying various angles seemed to indicate this spiking (in this particular test file) stops with a BEVEL_GOOD_ANGLE of 0.015, and I think that still doesn't break #86768 though I'm not really sure what to test there as .25 in current master seemed to behave identical to 0.0001 and 0.015 for the test file provided, so probably I test the wrong thing.

Added subscriber: @BlenderBruno

Added subscriber: @BlenderBruno

FWIW, I confirm @Baardaap finding for the provided test file (using a custom build on 3.5 alpha). It starts to break down with a BEVEL_GOOD_ANGLE value lower than 0.0112655.

Untitled1.mp4

It seems the BEVEL_GOOD_ANGLE value can be as high as 0.16 without breaking #86768 and has no effect at all on the second test file of #86768 though (which still shows some unwanted artefacts with bevel modifier percent set to 100% with loopslide), attached here for reference:
bevel_loop_slide_failure2.blend

Untitled.mp4

FWIW, I confirm @Baardaap finding for the provided test file (using a custom build on 3.5 alpha). It starts to break down with a `BEVEL_GOOD_ANGLE` value lower than `0.0112655`. [Untitled1.mp4](https://archive.blender.org/developer/F14094074/Untitled1.mp4) It seems the `BEVEL_GOOD_ANGLE` value can be as high as `0.16` without breaking #86768 and has no effect at all on the second test file of #86768 though (which still shows some unwanted artefacts with bevel modifier percent set to 100% with loopslide), attached here for reference: [bevel_loop_slide_failure2.blend](https://archive.blender.org/developer/F9917825/bevel_loop_slide_failure2.blend) [Untitled.mp4](https://archive.blender.org/developer/F14094076/Untitled.mp4)

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

@howardt Hey Howard, any chance to take a look at this high priority report please? Thanks in advance.

@howardt Hey Howard, any chance to take a look at this high priority report please? Thanks in advance.
Member

Will look at it tomorrow.

Will look at it tomorrow.
Member

I think I will change BEVEL_GOOD_ANGLE to 0.1, which works for all the test files in #44961, #86768, #95335, and #102532.
For some reason, I cannot get the modifiers test to work before making this change, so am afraid to make it for fear of breaking that test and not being able to fix it. I think I'll try on another computer.

I think I will change BEVEL_GOOD_ANGLE to 0.1, which works for all the test files in #44961, #86768, #95335, and #102532. For some reason, I cannot get the modifiers test to work before making this change, so am afraid to make it for fear of breaking that test and not being able to fix it. I think I'll try on another computer.

This issue was referenced by b544199c56

This issue was referenced by b544199c566bbb9529b5925ce96ae2d2abbf04c1
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Howard Trickey self-assigned this 2023-01-22 16:44:16 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102532
No description provided.